# Taltner

./: .env  .gitignore  .mise.toml  CODEOWNERS  CONTRIBUTING.md  README.md  commitlint.config.js  package-lock.json
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: AnalyzePythonCode.yml
client/: .eslintrc.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/mock/: db.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/ui/: accordion.tsx
client/src/features/generateTopic/components/: AudioRecorder.jsx  ReceiveApi.jsx  TalkChoice.tsx  post-new.jsx
client/src/features/generateTopic/hooks/: useReceiveapi.ts  useRecieveapi.ts
client/src/features/main/components/: Accordion.tsx  Main.tsx  MicInputButton.tsx  Sidebar.tsx  TalkChoice.tsx
client/src/features/post/components/: post-new.js  post-new.jsx  post-new.tsx
client/src/features/tutorial/components/: Carousel.tsx  Tutorial.tsx
server/: .gitignore  .pre-commit-config.yaml  README.md  ci_test.py  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
server/src/: app.py
server/src/OpenVINO/: decode_base64_audio.py  llm_config.py  llm_model_download.ipynb  llm_model_download.py  model_download.ipynb  stt_model_download.ipynb  stt_model_download.py
server/src/OpenVINO/audio/: base64_audio_test.txt
server/src/OpenVINO/notebooks/: llm_model_download.ipynb
server/src/OpenVINO/prompts/: llm_prompt.py
