[tool.poetry]
name = "taltner-server"
version = "0.1.0"
description = "Taltnerのサーバーサイド"
authors = ["KorRyu3 <146335193+KorRyu3@users.noreply.github.com>"]
readme = "README.md"
# Poetryを依存関係のみに使うため、パッケージモードを無効にする
package-mode = false

[tool.poetry.dependencies]
# アプリケーションに直接関わってくるパッケージ
python = "3.10.14"
wheel = "^0.43.0"

[tool.poetry.group.dev.dependencies]
# 開発時のみに必要なパッケージ
ruff = "^0.4.3"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
poetry = "^1.8.2"
poetry-plugin-export = "^1.7.1"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"




[tool.poetry.group.llm.dependencies]
openvino = "^2024.1.0"
optimum-intel = {git = "https://github.com/huggingface/optimum-intel.git"}
nncf = {git = "https://github.com/openvinotoolkit/nncf.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = "3.10.14"
